# city3d-stac-tool

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml  release.yml
crates/city3d-stac-gen/: Cargo.toml
crates/city3d-stac-gen/src/: adapter.rs  error.rs  lib.rs  main.rs  metadata.rs
crates/city3d-stac-gen/src/cli/: mod.rs  progress.rs
crates/city3d-stac-gen/src/config/: mod.rs
crates/city3d-stac-gen/src/metadata/: attributes.rs  bbox.rs  mod.rs  transform.rs
crates/city3d-stac-gen/src/reader/: citygml.rs  cityjson.rs  cjseq.rs  fcb.rs  gzip.rs  mod.rs  zip.rs
crates/city3d-stac-gen/src/stac/: accumulator.rs  catalog.rs  collection.rs  from_file.rs  geoparquet.rs  interop.rs  item.rs  mod.rs
crates/city3d-stac-gen/src/traversal/: mod.rs
crates/city3d-stac-gen/src/validation/: mod.rs  result.rs
crates/city3d-stac-gen/tests/: catalog_tests.rs  citygml_tests.rs  cli_tests.rs  config_tests.rs  error_tests.rs  golden_output_tests.rs  integration_tests.rs  interop_tests.rs  metadata_tests.rs  reader_tests.rs  schema_validation_tests.rs  stac_tests.rs  traversal_tests.rs
crates/city3d-stac-gen/tests/data/: delft.city.json  delft.city.jsonl  prefixed_citygml2.gml
crates/city3d-stac-gen/tests/data/datetime_fixture/: with_reference_date.city.json
crates/city3d-stac-gen/tests/golden/: collection_test_data.json  item_railway.city.json.json  item_with_reference_date.city.json.json
crates/city3d-stac-gen/tests/schemas/: cityjson-extension.json  stac-collection.json  stac-item.json
crates/city3d-stac-types/: Cargo.toml
crates/city3d-stac-types/schemas/: stac-city3d-v0.2.0.json
crates/city3d-stac-types/src/: checksum.rs  error.rs  extensions.rs  lib.rs
crates/city3d-stac-types/src/metadata/: bbox.rs
crates/city3d-stac-types/src/stac/: accumulator.rs  city3d.rs  item.rs  mod.rs  models.rs  types.rs
crates/city3d-stac-types/tests/: accumulator_tests.rs  builder_tests.rs  city3d_properties_tests.rs  item_serde_tests.rs  metadata_tests.rs  schema_conformance_tests.rs
docs/: external-registry.md
examples/: remote-collection-config.toml
src/: lib.rs  memory.rs
src/cli/: mod.rs
src/config/: mod.rs
src/metadata/: bbox.rs  crs.rs
src/reader/: citygml.rs  mod.rs
src/remote/: mod.rs
src/stac/: accumulator.rs  collection.rs  item.rs  mod.rs
tests/: catalog_tests.rs  cjseq_e2e_tests.rs  config_tests.rs  golden_output_tests.rs  schema_validation_tests.rs
tests/golden/: item_3dbag_citygml2.gml.json  item_3dbag_citygml3.gml.json  item_all.fcb.json  item_delft.city.json.json  item_delft.city.jsonl.json
