[workspace]
resolver = "2"
members = ["crates/city3d-stac-types", "crates/city3d-stac-gen"]

[workspace.package]
edition = "2021"
authors = ["Hidemichi Baba"]
license = "MIT"
repository = "https://github.com/cityjson/city3d-stac-tool"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
proj4rs = { version = "0.1", features = ["crs-definitions"] }
city3d-stac-types = { path = "crates/city3d-stac-types", version = "0.1.0" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
